output/shout: declare minimum version 2.4.0
This version was released 7 years ago, and it's reasonable to require
at least this version.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.7 (not yet released)
 * decoder
   - opus: fix missing song length on high-latency files
+* output
+  - shout: require at least libshout 2.4.0
 * mixer
   - software: update volume of disabled outputs
 * support libiconv
