--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ ver 0.24 (not yet released)
   - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
 * tags
   - new tag "Mood"
+* switch to C++20
+  - GCC 10 or clang 11 (or newer) recommended
 
 ver 0.23.8 (not yet released)
 
