--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.8 (not yet released)
+* storage
+  - curl: fix crash if web server does not understand WebDAV
 
 ver 0.23.7 (2022/05/09)
 * database
