output/PipeWire: add nullptr check, fixing crash with PipeWire 0.3.53
Since PipeWire 0.3.53, control names can apparently be nulled, leading
to crashes in applications assertion that the string cannot be
nullptr.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1558

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.8 (not yet released)
 * storage
   - curl: fix crash if web server does not understand WebDAV
+* output
+  - pipewire: fix crash with PipeWire 0.3.53
 
 ver 0.23.7 (2022/05/09)
 * database
