mixer/All: auto-open "global" mixers
If a mixer is "global", it is available even if the output isn't
open.  However, since the check was changed from IsEnabled() to
IsReallyEnabled(), enabled outputs have not yet been used have not
been "really" enabled yet, preventing using the mixer.

Fixes a regression by commit 35dbc1a90c5110fbf6ab18e98c43463d1b4ea4f3
(part of https://github.com/MusicPlayerDaemon/MPD/pull/1480).

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1563

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.23.8 (not yet released)
   - pipewire: fix crash with PipeWire 0.3.53
 * mixer
   - better error messages
+  - alsa: fix setting volume before playback starts
 * support libfmt 9
 
 ver 0.23.7 (2022/05/09)
