--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ ver 0.23.8 (not yet released)
 * mixer
   - better error messages
   - alsa: fix setting volume before playback starts
+  - pipewire: fix crash bug
 * support libfmt 9
 
 ver 0.23.7 (2022/05/09)
