--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.8 (not yet released)
 * storage
   - curl: fix crash if web server does not understand WebDAV
+* input
+  - cdio_paranoia: fix crash if no drive was found
 * output
   - pipewire: fix crash with PipeWire 0.3.53
 * mixer
