input/CdioParanoia: remove loop from Read()
The Read() method is not required to fill the whole buffer.  By
returning as soon as at least one byte was read, we allow faster
cancellation.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ ver 0.23.8 (not yet released)
   - curl: fix crash if web server does not understand WebDAV
 * input
   - cdio_paranoia: fix crash if no drive was found
+  - cdio_paranoia: faster cancellation
 * output
   - pipewire: fix crash with PipeWire 0.3.53
 * mixer
