--- a/NEWS
+++ b/NEWS
@@ -5,12 +5,11 @@ ver 0.23.8 (not yet released)
   - cdio_paranoia: fix crash if no drive was found
   - cdio_paranoia: faster cancellation
   - cdio_paranoia: don't scan for replay gain tags
-* output
-  - pipewire: fix crash with PipeWire 0.3.53
 * mixer
   - better error messages
   - alsa: fix setting volume before playback starts
   - pipewire: fix crash bug
+  - pipewire: fix volume change events with PipeWire 0.3.53
 * support libfmt 9
 
 ver 0.23.7 (2022/05/09)
