output/snapcast: fix busy loop while paused
Removing the LockHasClients(); this code was copied from the "httpd"
output plugin, but unlike "httpd", the SnapCast output plugin does not
feed silence while paused, so we need to implement a delay to avoid
busy-looping the CPU.

As a side effect, this eliminates the suttering after resuming
playback, because the timer now gets reset even if there is a client.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1394

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ ver 0.23.8 (not yet released)
   - cdio_paranoia: fix crash if no drive was found
   - cdio_paranoia: faster cancellation
   - cdio_paranoia: don't scan for replay gain tags
+  - snapcast: fix busy loop while paused
+  - snapcast: fix stuttering after resuming playback
 * mixer
   - better error messages
   - alsa: fix setting volume before playback starts
