--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.23.8 (not yet released)
   - cdio_paranoia: fix crash if no drive was found
   - cdio_paranoia: faster cancellation
   - cdio_paranoia: don't scan for replay gain tags
+  - pipewire: fix playback of very short tracks
   - snapcast: fix busy loop while paused
   - snapcast: fix stuttering after resuming playback
 * mixer
