output/PipeWire: after Cancel(), refill buffer before resuming playback
Deactivate the stream in Cancel().  This fixes stuttering after a
manual song change by refilling the whole ring buffer before
reactivating the stream.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1354

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ ver 0.23.8 (not yet released)
   - cdio_paranoia: don't scan for replay gain tags
   - pipewire: fix playback of very short tracks
   - pipewire: drop all buffers before manual song change
+  - pipewire: fix stuttering after manual song change
   - snapcast: fix busy loop while paused
   - snapcast: fix stuttering after resuming playback
 * mixer
