decoder/ffmpeg: wrap FFmpeg include in "extern C"
Commit ebae25d175eb31 added that #include, but forgot to wrap it in
"extern C", so the linker tried to look up C++ symbols, causing linker
failure.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1582

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.9 (not yet released)
+* decoder
+  - ffmpeg: support FFmpeg 5.1
 * output
   - pipewire: set app icon
 * improve iconv detection
