This PR provides forward and backward compatibility at macos SDK 12.0. At SDK 12.0, API function names were changed essentially replacing occurrences of the word Master/master with Main/main. This change was test built on two different systems.
1. macos 10.15.7 with Xcode 12.4 and clang 12.0.0 on x86_64
2. macos 12.5 with Xcode 13.4.1 and clang 13.1.6 on arm64 (Apple silicon M1)

It should be noted that on macos 10.15.7 with Xcode 11.2 and clang 11.0, MPD will not build.
The MPD documentation states that clang 11.0 is the minimum requirement,
but clang 11.0 produces compile errors. Apparently the macos version
of clang 11.0 is not fully compliant.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ver 0.23.9 (not yet released)
 * output
   - pipewire: set app icon
 * improve iconv detection
+* macOS: fix macOS 10 build problem (0.23.8 regression)
 
 ver 0.23.8 (2022/07/09)
 * storage
