mixer/Volume: refactor to class MixerMemento, per partition
Eliminate global variables, convert them to MixerMemento fields.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1583

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.23.9 (not yet released)
   - ffmpeg: support FFmpeg 5.1
 * output
   - pipewire: set app icon
+* fix bogus volume levels with multiple partitions
 * improve iconv detection
 * macOS: fix macOS 10 build problem (0.23.8 regression)
 
