decoder/ffmpeg: add libfmt formatter for AVSampleFormat
Fixes compiler warning because formatting unscoped enums is deprecated
since libfmt 9.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.10 (not yet released)
+* decoder
+  - ffmpeg: fix libfmt 9 compiler warning
 * encoder
   - flac: fix failure when libFLAC is built without Ogg support
 * Windows
