--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.10 (not yet released)
+* storage
+  - curl: fix file time stamps
 * decoder
   - ffmpeg: fix libfmt 9 compiler warning
 * encoder
