output/alsa: add nullptr check for snd_pcm_name() return value
It is not explicitly documented whether snd_pcm_name() is allowed to
return NULL:
https://www.alsa-project.org/alsa-doc/alsa-lib/group___p_c_m.html#ga5031edc0422df8db1f70af056a12dd77

But apparently this is legal:
https://github.com/alsa-project/alsa-lib/blob/0222f45d11e8b71bf651b985b00fdb0addbf3eed/src/pcm/pcm.c#L2761-L2762

That's ... surprising!

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1645

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ ver 0.23.10 (not yet released)
   - ffmpeg: fix libfmt 9 compiler warning
 * encoder
   - flac: fix failure when libFLAC is built without Ogg support
+* output
+  - alsa: fix crash bug
 * Windows
   - log to stdout by default, don't require "log_file" setting
 
