--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 ver 0.23.11 (not yet released)
+* macOS: fix build failure "no archive members specified"
 * Android/Windows
   - update OpenSSL to 3.0.7
 
