system/Error: truncate the snprintf() return value
snprintf() does not return the (truncated) length actually written,
but the length that would be needed if the buffer were large enough.
This API usage mistake in FormatLastError() can lead to overflow of
the stack buffer, crashing the process (Windows only).

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1676

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 ver 0.23.11 (not yet released)
 * macOS: fix build failure "no archive members specified"
+* Windows
+  - fix crash bug (stack buffer overflow) after I/O errors
 * Android/Windows
   - update OpenSSL to 3.0.7
 
