--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.11 (not yet released)
+* database
+  - simple: move default database to ~/.cache/mpd/db from ~/.cache/mpd.db
 * macOS: fix build failure "no archive members specified"
 * Windows
   - fix crash bug (stack buffer overflow) after I/O errors
