python/build/libs.py: re-enable verbose error strings
This compile-time option is not about debug logging, but about
curl_easy_strerror().

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1670

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ ver 0.23.11 (not yet released)
   - fix path traversal bug because backslash was allowed in playlist names
 * Android/Windows
   - update OpenSSL to 3.0.7
+  - re-enable CURL's verbose error strings
 
 ver 0.23.10 (2022/10/14)
 * storage
