--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ver 0.23.12 (not yet released)
+
 ver 0.23.11 (2022/11/28)
 * database
   - simple: move default database to ~/.cache/mpd/db from ~/.cache/mpd.db
