NEWS: mention the GCC13 fixes

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.23.12 (not yet released)
 * tags
   - fix crash bug due to race condition
+* fix build failures with GCC 13
 
 ver 0.23.11 (2022/11/28)
 * database
