decoder/mad: fix integer underflow with very small files
When drop_start_samples and drop_end_samples overlap and are greater
than the actual number of samples, the `num_samples` calculation in
SubmitPCM() could underflow.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1712

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.12 (not yet released)
 * input
   - curl: require CURL 7.55.0 or later
+* decoder
+  - mad: fix integer underflow with very small files
 * tags
   - fix crash bug due to race condition
 * output
