output/jack: remove DLL support
This effectively reverts commit 0f02bbc2fe4fa5e3 which was a horrible
kludge for JACK support on Windows.  Maintaining this kludge doesn't
seem worth the trouble (the JACK version was never updated), and
apparently nobody uses this.

--- a/NEWS
+++ b/NEWS
@@ -29,6 +29,7 @@ ver 0.24 (not yet released)
 * static partition configuration
 * Windows
   - build with libsamplerate
+  - remove JACK DLL support
 * remove Haiku support
 * remove Boost dependency
 * require libfmt 7 or later
