--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.13 (not yet released)
 * input
   - curl: fix busy loop after connection failed
+* output
+  - pipewire: fix corruption bug due to missing lock
 
 ver 0.23.12 (2023/01/17)
 * input
