--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ ver 0.24 (not yet released)
   - curl: fix busy loop after connection failed
 * decoder
   - ffmpeg: require FFmpeg 4.0 or later
+  - gme: require GME 0.6 or later
   - hybrid_dsd: remove
   - opus: implement bitrate calculation
   - wavpack: require libwavpack version 5
