--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,8 @@ ver 0.24 (not yet released)
   - opus: implement bitrate calculation
   - sidplay: require libsidplayfp (drop support for the original sidplay)
   - wavpack: require libwavpack version 5
+* resampler
+  - soxr: require libsoxr 0.1.2 or later
 * player
   - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
   - "one-shot" consume mode
