input/plugins/Alsa: limit ALSA buffer time to 2 seconds maximum
Some ALSA capture devices can have very large buffers, holding 10
seconds or more audio. Using the maximum buffer size with such
devices leads to unacceptably large, and unnecessary, latency.
Also, some ALSA drivers (e.g. HDA Intel PCH) report an invalid
maximum period size, and the period size that mpd calculates from
the maximum buffer size results in "Invalid argument" error when
applying the hw_params. Note that the "default" capture device on
many cards includes the "dsnoop" plugin which imposes a buffer
size of 16384 frames, so that "alsa://" works OK but
"alsa://plughw" or "alsa://hw" both fail.

Limit the maximum buffer time for ALSA input devices to a more useable
2 seconds, thereby avoiding both the above problems.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.15 (not yet released)
 * decoder
   - ffmpeg: fix build failure with FFmpeg 6.1
+* output
+  - alsa: limit buffer time to 2 seconds
 
 ver 0.23.14 (2023/10/08)
 * decoder
