--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ ver 0.23.13 (not yet released)
 * Linux
   - shut down if parent process dies in --no-daemon mode
   - determine systemd unit directories via pkg-config
+* support libfmt 10
 
 ver 0.23.12 (2023/01/17)
 * input
