db/update/Walk: clear `Song::in_playlist`
Without clearing all `in_playlist` flags, the songs will never be
revealed again if they were hidden once by a CUE sheet, not even after
the CUE sheet gets deleted or modified.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1784

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ ver 0.23.13 (not yet released)
   - curl: fix busy loop after connection failed
 * archive
   - zzip: fix crash bug
+* database
+  - simple: reveal hidden songs after deleting containing CUE
 * decoder
   - ffmpeg: reorder to a lower priority than "gme"
   - gme: require GME 0.6 or later
