--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.14 (not yet released)
 * decoder
   - mad: fix calculation of LAME peak values
+* mixer
+  - wasapi: fix problem setting volume
 
 ver 0.23.13 (2023/05/22)
 * input
