--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 ver 0.23.14 (not yet released)
 * decoder
+  - flac: fix scanning files with non-ASCII names on Windows
   - mad: fix calculation of LAME peak values
 * mixer
   - wasapi: fix problem setting volume
