--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ver 0.23.14 (not yet released)
   - mad: fix calculation of LAME peak values
 * mixer
   - wasapi: fix problem setting volume
+* more libfmt 10 fixes
 
 ver 0.23.13 (2023/05/22)
 * input
