--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.23.14 (not yet released)
+ver 0.23.14 (2023/10/08)
 * decoder
   - flac: fix scanning files with non-ASCII names on Windows
   - mad: fix calculation of LAME peak values
