--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ ver 0.24 (not yet released)
   - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt" and "gt"
 * database
   - attribute "added" shows when each song was added to the database
+  - fix integer overflows with 64-bit inode numbers
   - proxy: require MPD 0.21 or later
   - proxy: require libmpdclient 2.15 or later
 * archive
