--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.16 (not yet released)
+* database
+  - fix integer overflows with 64-bit inode numbers
 * support libfmt 11
 * support ICU 76
 
