--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,7 @@ ver 0.24 (not yet released)
   - ffmpeg: require FFmpeg 4.0 or later
   - ffmpeg: query supported demuxers at runtime
   - hybrid_dsd: remove
+  - mpg123: prefer over "mad"
   - opus: implement bitrate calculation
   - sidplay: require libsidplayfp (drop support for the original sidplay)
   - wavpack: require libwavpack version 5
