--- a/NEWS
+++ b/NEWS
@@ -32,6 +32,7 @@ ver 0.24 (not yet released)
   - ffmpeg: query supported demuxers at runtime
   - hybrid_dsd: remove
   - mpg123: prefer over "mad"
+  - mpg123: support streaming
   - opus: implement bitrate calculation
   - sidplay: require libsidplayfp (drop support for the original sidplay)
   - wavpack: require libwavpack version 5
