--- a/NEWS
+++ b/NEWS
@@ -1010,7 +1010,7 @@ ver 0.20.10 (2017/08/24)
 * decoder
   - ffmpeg: support MusicBrainz ID3v2 tags
 * tags
-  - aiff: fix FORM chunk size endianess (is big-endian)
+  - aiff: fix FORM chunk size endianness (is big-endian)
 * mixer
   - osx: add a mixer for OSX.
 * fix crash when resuming playback before decoder is ready
