--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,7 @@ ver 0.24 (not yet released)
   - add option to disable archive plugins in mpd.conf
 * storage
   - curl: optimize database update
+  - nfs: require libnfs 4.0 or later
 * input
   - alsa: limit ALSA buffer time to 2 seconds
   - curl: add "connect_timeout" configuration
