output/alsa: set up the ALSA channel map
This is necessary for proper multi-channel support because many ALSA
drivers do not use the channel maps from surround*.conf.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2063

--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,7 @@ ver 0.24 (not yet released)
   - nfs: support libnfs URL arguments
 * input
   - alsa: limit ALSA buffer time to 2 seconds
+  - alsa: set up a channel map
   - curl: add "connect_timeout" configuration
 * decoder
   - ffmpeg: require FFmpeg 4.0 or later
