--- a/NEWS
+++ b/NEWS
@@ -63,6 +63,7 @@ ver 0.24 (not yet released)
 * remove Boost dependency
 * require libfmt 9 or later
 * documentation: switch to sphinx-rtd-theme
+* require Meson 1.0
 
 ver 0.23.15 (2023/12/20)
 * decoder
