feat: Add ShowMovement Tag
This commit adds the `SHOWMOVEMENT` [tag](https://picard-docs.musicbrainz.org/en/appendices/tag_mapping.html#show-work-movement-4). Historically, this tag originates from iTunes' MP4, but has since become widely used. It is created by Picard's Classical music [plugins](https://picard-docs.musicbrainz.org/en/variables/variables_classical.html) (such as "Classical Extras" or "Work & Movement").

The reasoning behind this tag is to display Work & Movement titles without redundant information and in a more uniform way. Moreover, it additionally serves as an implicit marker denoting classical music tracks (genre tags aren't sufficient).

If the client so chooses to support this tag, they can display `Work` and `Movement` instead of the track title allowing for cleaner display. Other clients can continue to display the `%title%` as before without any fuss.

--- a/NEWS
+++ b/NEWS
@@ -48,7 +48,7 @@ ver 0.24 (not yet released)
   - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
   - "one-shot" consume mode
 * tags
-  - new tags "TitleSort", "Mood"
+  - new tags "TitleSort", "Mood", "ShowMovement"
 * output
   - add option "always_off"
   - alsa: require alsa-lib 1.1 or later
