--- a/NEWS
+++ b/NEWS
@@ -42,6 +42,7 @@ ver 0.24 (not yet released)
   - opus: implement bitrate calculation
   - sidplay: require libsidplayfp (drop support for the original sidplay)
   - wavpack: require libwavpack version 5
+  - fix MixRamp bug
 * resampler
   - soxr: require libsoxr 0.1.2 or later
 * player
