--- a/NEWS
+++ b/NEWS
@@ -13,7 +13,7 @@ ver 0.24 (not yet released)
   - new commands "stickernames", "stickertypes", "playlistlength", "searchplaylist"
   - new "search"/"find" filter "added-since"
   - allow range in listplaylist and listplaylistinfo
-  - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt" and "gt"
+  - "sticker find" supports sort and window parameter and new sticker compare operators "eq", "lt", "gt", "contains" and "starts_with"
   - consume only idle flags that were subscribed to
   - volume command is no longer deprecated
 * database
