filter/ffmpeg: fill `AVFrame::pts`
Some libavfilter plugins don't produce any output if `pts` is never
set, e.g. the `lowpass` plugin.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2114

--- a/NEWS
+++ b/NEWS
@@ -46,6 +46,8 @@ ver 0.24 (not yet released)
   - sidplay: require libsidplayfp (drop support for the original sidplay)
   - wavpack: require libwavpack version 5
   - fix MixRamp bug
+* filter
+  - ffmpeg: fix for filters producing no output
 * resampler
   - soxr: require libsoxr 0.1.2 or later
 * player
