New commands outputlist and output
- `outputlist` is a more compact version of the outputs command that does not print attributes.
- `output {ID}` prints the details of specified output id.

Clients usually prints a list of outputs and after the user selects an output, it shows the details.

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ ver 0.24 (not yet released)
   - volume command is no longer deprecated
   - new "available" and "reset" subcommands for tagtypes
   - searching stored playlists respond now with song position
+  - new commands "outputlist" and "output"
 * database
   - attribute "added" shows when each song was added to the database
   - fix integer overflows with 64-bit inode numbers
