increment version number to 0.23.17

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ver 0.23.17 (not yet released)
+* support libfmt 11.1
+
 ver 0.23.16 (2024/12/03)
 * database
   - fix integer overflows with 64-bit inode numbers
