--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.23.17 (not yet released)
 * storage
   - nfs: require libnfs 4.0 or later
+* database
+  - inotify: trigger update after symlink was created
 * support libfmt 11.1
 
 ver 0.23.16 (2024/12/03)
