command/file: "albumart" tries to send larger chunks if available
If we only receive very little data from the InputStream, try a second
Read() call to get more data.  This works around tiny reads at input
buffer boundaries with the io_uring input plugin.  These tiny reads
are inefficient, and we can afford to wait one more low-level I/O
iteration to finish (but not more).

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2186

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.17 (not yet released)
+* protocol
+  - "albumart" tries to send larger chunks if available
 * storage
   - nfs: require libnfs 4.0 or later
 * database
