client/Process: explicitly disallow "idle" and "noidle" in command lists
These commands cannot possibly work with command lists because command
lists are supposed to be atomic, but suspended command execution
conflicts with that.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2167

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.23.17 (not yet released)
 * protocol
   - "albumart" tries to send larger chunks if available
+  - explicitly disallow "idle" and "noidle" in command lists
 * storage
   - nfs: require libnfs 4.0 or later
 * database
