--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.24 (not yet released)
+ver 0.24 (2025/03/11)
 * protocol
   - new command "searchcount" (case-insensitive "count")
   - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
