--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.1 (not yet released)
+* input
+  - curl: fix malformed "Range" header
 * output
   - sndio: fix rounding error in volume calculation
 * log: include year in time stamp
