input/async: clear `seek_state` if an I/O error is pending
Without this, Seek() will be stuck forever.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.2 (not yet released)
+* input
+  - io_uring: fix stuck seek after I/O error
 * decoder
   - flac: enable chained Ogg decoding
 
