require Meson 1.2 (for C++23 support)

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ ver 0.25 (not yet released)
   - implement "window" parameter for command "list"
 * output
   - pipewire: add option "reconnect_stream"
+* require Meson 1.2
 
 ver 0.24.2 (not yet released)
 * input
