--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.24.2 (not yet released)
   - flac: enable chained Ogg decoding
 * player
   - fix stalled playback after queue modification
+  - fix deadlock with "single" mode
 * Linux: fix build failure with ancient kernel headers
 
 ver 0.24.1 (2025/03/21)
