pcm/Channels: implement for DSD
Right now, MPD converts everything to integer or float samples if it
needs to change the channel count.  After the previous commit (that
disables sample arithmetic for DSD samples), enabling DSD support in
the PcmChannelsConverter is simple.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2214

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ ver 0.24.3 (not yet released)
   - output: fix error "Resource temporarily unavailable"
 * Windows
   - fix cross build on Linux when WINE is not installed
+* DSD: support channel conversion
 
 ver 0.24.2 (2025/03/26)
 * input
