--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 ver 0.24.3 (not yet released)
 * decoder
+  - ffmpeg: support WMA
   - mpg123: fix trailing space in tag values
 * tags
   - libid3tag: fix Meson subproject configure error
