--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.3 (not yet released)
+* input
+  - qobuz: use nlohmann_json instead of yajl
 * decoder
   - ffmpeg: support WMA
   - mpg123: fix trailing space in tag values
