playlist/soundcloud: remove defunct plugin
The part of the SoundCloud API that MPD had been using doesn't work
(anymore).  I have no idea when this old protocol was switched off and
I have no idea if anybody has ever used MPD's plugin (there's no bug
report), but keeping it now makes no sense.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.24.3 (not yet released)
 * input
   - qobuz: use nlohmann_json instead of yajl
+* playlist
+  - soundcloud: remove defunct plugin
 * decoder
   - ffmpeg: support WMA
   - mpg123: fix trailing space in tag values
