--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ ver 0.24.3 (not yet released)
   - libid3tag: add missing zlib dependency to Meson subproject
 * output
   - oss: fix error "Resource temporarily unavailable"
+  - shout: fix hang on activating shout output
   - snapcast: use nlohmann_json instead of yajl to generate JSON tags
 * Windows
   - fix cross build on Linux when WINE is not installed
