--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@ ver 0.24.3 (not yet released)
   - oss: fix error "Resource temporarily unavailable"
   - shout: fix hang on activating shout output
   - snapcast: use nlohmann_json instead of yajl to generate JSON tags
+* Linux
+  - allow using io_uring on Linux kernels older than 6.0
 * Windows
   - fix cross build on Linux when WINE is not installed
 * DSD: support channel conversion
