decoder/mpg123: use libid3tag to parse stream tags
libmpg123's built-in ID3v2 parser doesn't have proper support for some
tag types (e.g. DATE and TRACK).  We could use the "text"/"extra"
fields and parse the manually, but on the other hand, most MPD builds
have libid3tag, and libmpg123 provides access to the raw ID3v2 data,
so let's just use that for full ID3v2 support.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2280

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.24.4 (not yet released)
 * decoder
   - mpg123: support Icy stream tags
+  - mpg123: use libid3tag to parse stream tags
 
 ver 0.24.3 (2025/04/09)
 * input
