lib/alsa/Error: include asoundlib.h instead of error.h
Starting with alsa-lib 1.2.14, there is a "#warning" in alsa/error.h:

```
In file included from ../../src/lib/alsa/Error.cxx:7:
/usr/include/alsa/error.h:30:2: error: #warning "use #include <alsa/asoundlib.h>, <alsa/error.h> should not be used directly" [-Werror=cpp]
   30 | #warning "use #include <alsa/asoundlib.h>, <alsa/error.h> should not be used directly"
      |  ^~~~~~~
```

This means we can't use minimal includes anymore and must endure
ALSA's header bloat.  Pity.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ ver 0.24.4 (not yet released)
 * decoder
   - mpg123: support Icy stream tags
   - mpg123: use libid3tag to parse stream tags
+* output
+  - alsa: fix compiler warning with alsa-lib 1.2.14
 
 ver 0.24.3 (2025/04/09)
 * input
