output/Thread: reopen output after flush+pause ("single" mode)
When playback is paused at the end of a track due to "single" mode,
the source is first flushed and the output is drained (both does not
happen when pausing manually).  This sets source_state=FLUSHED which
means playback cannot be resumed until the AudioOutputSource is
reopened.  This however does not happen because
AudioOutputControl::Open() thinks it is not necessary; this method
however did not consider the AudioOutputSource flush state.  The
solution is to add yet another flag called "should_reopen" which is
set whenever the source is flushed.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2279

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.24.4 (not yet released)
 * tags
   - id3: fix assertion failure with broken AIFF/RIFF ID3 chunks
 * output
+  - fix resuming playback after it was paused by "single" mode
   - alsa: fix compiler warning with alsa-lib 1.2.14
 
 ver 0.24.3 (2025/04/09)
