command/FingerprintCommands: install the InputStreamHandler for local files
This call was missing after OpenLocalInputStream(), leading to all
"getfingerprint" calls with io_uring to become stuck because nobody
would notify the condition variable.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2286

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.4 (not yet released)
+* protocol
+  - fix stuck "getfingerprint" with io_uring
 * decoder
   - mpg123: support Icy stream tags
   - mpg123: use libid3tag to parse stream tags
