--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.5 (not yet released)
+* output
+  - pipewire: fix resuming playback after it was paused by "single" mode
 
 ver 0.24.4 (2025/05/20)
 * protocol
