lib/fmt/SystemError: remove unnecessary FormatMessageA() suffix
This causes the Windows error message to occur twice. And it causes
libfmt to crash if CP_ACP is not ASCII-compatible (e.g. codepage-932 /
shift_jis) due to our use of FormatMessageA(). See also
https://github.com/MusicPlayerDaemon/MPD/pull/2305 for a discussion.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2302

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ ver 0.24.5 (not yet released)
   - sidplay: add support for PSID files
 * output
   - pipewire: fix resuming playback after it was paused by "single" mode
+* Windows
+  - fix libfmt error "what(): invalid utf8"
 
 ver 0.24.4 (2025/05/20)
 * protocol
