decoder/mpg123: set option MPG123_SKIP_ID3V2
This works around libmpg123 bug
https://sourceforge.net/p/mpg123/bugs/379/ which sometimes corrupts
ID3 tags returned by the library.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.24.5 (not yet released)
   - ffmpeg: handle "*.aif" files
   - mpg123: add option "full_scan"
   - mpg123: support seeking on remote files
+  - mpg123: work around libmpg123 ID3 corruption bug
   - sidplay: add support for PSID files
 * output
   - pipewire: fix resuming playback after it was paused by "single" mode
