decoder/Client: pass std::exception_ptr to method SeekError()
This allows decoder plugins to show detailed seek errors that will be
included in the seek error message in the MPD protocol.

Currently, this new parameter is optional, and some decoders may never
pass details because they don't have any.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ ver 0.25 (not yet released)
 * protocol
   - implement "window" parameter for command "list"
   - new command "stringnormalization"
+  - show detailed seek errors
 * decoder
   - vgmstream: new plugin
 * output
