decoder/ffmpeg: handle "*.opus" files
Yet another special case which is needed because Opus is a codec and
not a demuxer.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 ver 0.24.6 (not yet released)
 * decoder
+  - ffmpeg: handle "*.opus" files
   - mpg123: another workaround for libmpg123 ID3 corruption bug
   - opus: fix seeking in files with large OpusTags
 
