decoder/ffmpeg: allow seeking only if both AVFormatContext and InputStream allow it
The check implemented by commit 11d1f56062cc ("Fix seeking HLS
on-demand streaming not working") was wrong: it allowed seeking if
either the InputStream or the AVFormatContext allows it.  But if the
AVFormatContext doesn't allow seeking (the AVFMTCTX_UNSEEKABLE flag is
set), there's no way av_seek_frame() will ever succeed.  Both layers
must really allow seeking.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2403

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.7 (not yet released)
+* decoder
+  - ffmpeg: allow seeking only if both AVFormatContext and InputStream allow it
 * fix spurious linker failures
 
 ver 0.24.6 (2025/10/20)
