input/TextInputStream: Strip UTF-8 BOM on first `ReadLine()`
Fixes parsing of cue sheets with UTF-8 BOM. The BOM is now detected
and consumed before the first line is parsed.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 ver 0.24.7 (not yet released)
 * decoder
   - ffmpeg: allow seeking only if both AVFormatContext and InputStream allow it
+* playlist
+  - cue: strip UTF-8 byte order marker
 * fix GCC 16 compiler warning
 * fix spurious linker failures
 
