input/cdio_paranoia: use SplitLast() to allow absolute device paths
Fixes parsing of absolute device paths which is a 0.24 regression by commit
aee49d1c1c75089.  That commit replaced strrchr() with Split() and thus
stopped at the first slash.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/2414

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.8 (not yet released)
+* input
+  - cdio_paranoia: fix parsing of absolute device paths (0.24 regression)
 * Linux: fix build with liburing < 2.4
 
 ver 0.24.7 (2026/01/16)
