decoder/faad: output 32 bit floating point samples instead of 16 bit integer
Like commit 5e9ccdec63 but for the "faad" decoder plugin instead of
"vorbis".  Internally, libfaad uses 32 bit floating point, and using
that preserves a few bits for high-end DACs; for everybody else, MPD
will do the 16 bit conversion.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.25 (not yet released)
   - show detailed seek errors
 * decoder
   - faad: implement seeking
+  - faad: output 32 bit floating point samples instead of 16 bit integer
   - vgmstream: new plugin
 * output
   - pipewire: add option "reconnect_stream"
