lib/upnp/meson.build: refuse to build with libupnp >= 1.14.26 due to API breakage
This avoids MPD build breakages for users which have libupnp with the
API-breaking commit
 https://github.com/pupnp/pupnp/commit/25d4bd0b9f8025ff4a7fb714b907f580e9d7efa0

We once had the conditional `const` loooong ago, but it was removed by
commit 736a696f9804504479805eec91efa0779a2a7650 ("drop support for
libupnp versions older than 1.8").  I don't want to add another
compile-time conditional because I don't understand the API change
yet.  I'm not even sure anybody even uses MPD with UPnP.  Let's see if
anybody complains (and re-submits the old pre-1.8 workaround, but I'd
prefer if the pupnp project reverts the API breakage instead).

See https://github.com/pupnp/pupnp/issues/528

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.9 (not yet released)
+* database
+  - upnp: refuse to build with libupnp >= 1.14.26 due to API breakage
 
 ver 0.24.8 (2026/01/26)
 * input
