lib/curl/Easy: do not qualify the curl_easy_*() calls
This breaks with CURL 8.19 where these are preprocessor macros
beginning with an open parenthesis.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.9 (not yet released)
+* input
+  - curl: fix build failure after CURL 8.19 API change
 * database
   - upnp: refuse to build with libupnp >= 1.14.26 due to API breakage
 
